[package]
name = "hydro-strike"
version = "0.1.0"
edition = "2021"

default-run = "hydro-strike"

build = "build.rs"

[profile.release]
debug = 1
lto = "fat"

[dependencies]
anyhow = { version = "1.0.86", features = ["backtrace"] }
az = "1.2.1"
biquad = "0.4.2"
chrono = "0.4.38"
env_logger = "0.11.5"
libbtbb-sys = { version = "0.1.0", path = "../../../Rust/libbtbb-sys" }
# liquid-dsp-sys = { version = "0.1.0", features = ["num-complex"] }
liquid-dsp-sys = { path = "./liquid-dsp-sys", features = ["num-complex"] }
log = "0.4.22"
log-derive = "0.4.1"
nom = "7.1.3"
num-complex = "0.4.6"
num-derive = "0.4.2"
num-traits = "0.2.19"
pretty-hex = "0.4.1"
regex = "1.11.1"
rustfft = "6.2.0"
serde = "1.0.210"
serde_derive = "1.0.210"
serde_json = "1.0.132"
signalbool = "0.2.5"
soapysdr = { version = "0.4.0", features = ["log"] }
thread-priority = "1.1.0"
tungstenite = "0.24.0"
useful_number = "0.1.2"
wrcap = { version = "0.1.0", path = "../../../Rust/wrcap" }
zerocopy = "0.8.9"

[dev-dependencies]
approx = { version = "0.5.1", features = ["num-complex"] }
rand = { version = "0.8.5", features = ["small_rng"] }

[features]

[build-dependencies]
cc = "1.1.31"

# default = ["ice9"]
